kubernetes/applications/default/whoami/03-whoami-ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-nginx-test
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "whoami.aoach.tech"
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: whoami
              port:
                number: 80
